--- a/.github/workflows/pypi-auto-deploy.yml
+++ b/.github/workflows/pypi-auto-deploy.yml
@@ -21,15 +21,15 @@ jobs:
     - name: Build a binary wheel and source tarball
       run: >-
           python setup.py sdist bdist_wheel
-    - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        user: __token__
-        password: ${{ secrets.pypi_password }}
-    - name: Upload to release
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-          repo_token: ${{ secrets.RELEASE_TOKEN }}
-          prerelease: false
-          draft: true
-          files: dist/*
+#    - name: Publish distribution 📦 to PyPI
+#      uses: pypa/gh-action-pypi-publish@master
+#      with:
+#        user: __token__
+#        password: ${{ secrets.pypi_password }}
+#    - name: Upload to release
+#      uses: marvinpinto/action-automatic-releases@latest
+#      with:
+#          repo_token: ${{ secrets.RELEASE_TOKEN }}
+#          prerelease: false
+#          draft: true
+#          files: dist/*
