updated github actions

--- a/.github/workflows/build-docker-on-release.yml
+++ b/.github/workflows/build-docker-on-release.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout files from repository
         uses: actions/checkout@v2
         with:
-          repository: archivy/archivy-docker
+          repository: sgc003y/archivy-docker
 
       - name: Setting variables
         if: success()
@@ -20,8 +20,8 @@ jobs:
           date -u +'%Y-%m-%dT%H:%M:%SZ' > TIMESTAMP
           echo "$GITHUB_SHA" | cut -c1-8 > SHORT_SHA
           echo "$GITHUB_REF" | cut -d / -f 3 > VERSION
-          echo "uzayg" > DOCKER_USERNAME
-          echo "docker.io/uzayg/archivy" > DOCKER_IMAGE
+          echo "sgc003y" > DOCKER_USERNAME
+          echo "docker.io/sgc003y/archivy" > DOCKER_IMAGE
 
       - name: Set up Docker Buildx
         if: success()
