--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Install archivy
         run: >-
           python -m pip install main/
-      - name: Clone archivy docs website
-        uses: actions/checkout@v2
-        with:
-          repository: archivy/archivy.github.io
-          ssh-key: ${{ secrets.ARCHIVY_ACCESS_KEY }}
-          path: docs-website
-      - name: Deploy docs
-        run: >-
-          cd docs-website && mkdocs gh-deploy --config-file ../main/mkdocs.yml --remote-branch main
+      #- name: Clone archivy docs website
+      #  uses: actions/checkout@v2
+      #  with:
+      #    repository: archivy/archivy.github.io
+      #    ssh-key: ${{ secrets.ARCHIVY_ACCESS_KEY }}
+      #    path: docs-website
+      #- name: Deploy docs
+      #  run: >-
+      #    cd docs-website && mkdocs gh-deploy --config-file ../main/mkdocs.yml --remote-branch main
