--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload to release
       uses: marvinpinto/action-automatic-releases@latest
       with:
-          repo_token: ${{ secrets.RELEASE_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: false
           draft: true
           files: dist/*
